Fix desing and componenet list ingrdients

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
       max-width: 800px;
       background-color: hsl(0, 0%, 100%);
       border-radius: 0px 0px 10px 10px;
-      padding: 20px;
+      padding: 40px;
       
     }
     header {
       max-width: 800px;
       background-color: hsl(0, 0%, 100%);
       border-radius: 10px 10px 0 0; 
-      padding: 20px 20px 0px 20px;
-      margin-top: 10px;
+      padding: 40px 40px 0px 40px;
+      margin-top: 40px;
     }
 
     .picture {
@@ -185,6 +185,9 @@
       body {
         padding: 20px;
       }
+      header {
+        padding: 10px;
+      }
       .container {
         padding: 10px;
       }
@@ -240,9 +243,9 @@
           <article class="prepareation-time">
             <p> Preparation time</p>
             <ul>
-              <li><p><strong>Total:</strong> Approximately 10 minutes</li></p>
-              <li><p><strong>Preparation:</strong> 5 minutes</li></p>
-              <li><p><strong>Cooking:</strong> 5 minutes</li></p>
+              <li><p><strong>Total:</strong> Approximately 10 minutes</p></li>
+              <li><p><strong>Preparation:</strong> 5 minutes</p></li>
+              <li><p><strong>Cooking:</strong> 5 minutes</p></li>
             </ul>
           </article>
       </section>
